Bug 167218 - Toggle Main Window shortcut doesn't work
Summary: Toggle Main Window shortcut doesn't work
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-22 16:08 UTC by Michel Filipe
Modified: 2008-07-23 14:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Filipe 2008-07-22 16:08:52 UTC
Version:           trunk (using Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.1.2 Gentoo 4.1.2 p1.0.2
OS:                Linux

When I press "Meta+P" it shows the Amarok Window, but if I press "Meta+P" again it doesn't hide.

A temporary solution is use "Meta+P" to show window and "Ctrl+F4" to close.
Comment 1 Edward Hades 2008-07-23 12:05:02 UTC
Bug confirmed for r836724.
Comment 2 Mark Kretschmann 2008-07-23 14:48:15 UTC
SVN commit 836983 by markey:

Make the "Toggle Main Window" shortcut also hide the main window correctly, if it's already shown.

I've removed the whole complicated (and broken) logic that we had in place for X11 (including switching virtual desktops). Now it will always just send Amarok to the systray or restore it, on all platforms. Are you people happy with this solution?

BUG: 167218


 M  +2 -32     MainWindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=836983