Make the "Toggle Main Window" shortcut also hide the main window correctly, if it's already shown.

I've removed the whole complicated (and broken) logic that we had in place for X11 (including switching virtual desktops). Now it will always just send Amarok to the systray or restore it, on all platforms. Are you people happy with this solution?

BUG: 167218

svn path=/trunk/extragear/multimedia/amarok/; revision=836983